--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,10 +54,15 @@ dependencies:
   # Date & Time
   intl: ^0.19.0
   
+  # Authentication & Firebase
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  firebase_messaging: ^14.9.4
+  google_sign_in: ^6.2.1
+  local_auth: ^2.1.8
+  
   # Notifications
   flutter_local_notifications: ^17.2.2
-  firebase_core: ^2.32.0
-  firebase_messaging: ^14.9.4
   
   # Permissions
   permission_handler: ^11.3.1
