Remove node_modules and large files, update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,21 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Node.js related
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Cache directories
+.cache/
+*.cache.dill*
+
+# Backend specific
+/backend/logs/
+/logs/
+
+# Build artifacts
+/build/
+*.dill
